[gd_scene load_steps=9 format=2]

[ext_resource path="res://Levels/Run/PlayerSideView.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Run/RunnerLevel.gd" type="Script" id=2]
[ext_resource path="res://Levels/Catwalks/Catwalks.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/CommonInfrastructure/ScrollingBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://Levels/Run/floor.png" type="Texture" id=5]
[ext_resource path="res://Music/BGM_LEVEL1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Levels/CommonInfrastructure/ScrollingSprite.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 518, 31.4499 )

[node name="RunnerLevel" type="Node2D"]
script = ExtResource( 2 )
next_scene = ExtResource( 3 )
timeline = "timeline-1676366608.json"

[node name="PlayerSideView" parent="." instance=ExtResource( 1 )]
position = Vector2( 157, 420 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 514, 568 )
scale = Vector2( 1.18178, 1.09371 )
collision_layer = 4

[node name="Sprite" type="Sprite" parent="Floor"]
position = Vector2( 0.846191, 11.8861 )
scale = Vector2( 0.233376, 0.355187 )
texture = ExtResource( 5 )
region_enabled = true
region_rect = Rect2( -2261.38, 0, 4897.12, 97.942 )
script = ExtResource( 7 )
speed = 1200.0

[node name="Polygon2D" type="Polygon2D" parent="Floor"]
visible = false
texture = ExtResource( 5 )
texture_offset = Vector2( 0, 10 )
texture_scale = Vector2( 1, 2.5 )
polygon = PoolVector2Array( -513, -10, 510, -9, 508, 32, -515, 25, -515, 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( -2, 10.6967 )
scale = Vector2( 1, 0.561122 )
shape = SubResource( 1 )

[node name="ObstacleSpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="ObstacleSpawns" type="Node2D" parent="."]

[node name="Walk" type="Position2D" parent="ObstacleSpawns"]
position = Vector2( 1068, 523 )

[node name="Fly" type="Position2D" parent="ObstacleSpawns"]
position = Vector2( 1068, 352 )

[node name="Timer" type="Node2D" parent="."]
position = Vector2( 387, 53 )
scale = Vector2( 5, 5 )

[node name="Label" type="Label" parent="Timer"]
margin_right = 40.0
margin_bottom = 14.0
text = "Time Left"

[node name="ExitTimer" type="Timer" parent="Timer"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Background" parent="." instance=ExtResource( 4 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -24.0
autoplay = true

[connection signal="timeout" from="ObstacleSpawnTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer/ExitTimer" to="." method="_on_ExitTimer_timeout"]

[editable path="PlayerSideView"]
